move sources to src directory

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "es6-3d-primitives",
   "description": "Basic 3D primitives (Points, Vector, Normales)",
+  "main": "src/main.js",
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "scripts": {
